<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/dp_5">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/old_password"
        android:padding="@dimen/dp_3"/>
    <EditText
        android:id="@+id/edt_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="12"
        android:padding="@dimen/dp_3"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:padding="@dimen/dp_3"/>
    <EditText
        android:id="@+id/edt_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="12"
        android:padding="@dimen/dp_3"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:padding="@dimen/dp_3"/>
    <EditText
        android:id="@+id/edt_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="12"
        android:padding="@dimen/dp_3"/>
    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/reset_password"
        android:padding="@dimen/dp_5"
        android:textColor="@android:color/white"
        android:layout_gravity="center"/>

</LinearLayout>