<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thyrocare.fragment.ClientEntryFragment"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newClientEntry"
                android:layout_gravity="center_horizontal"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_margin="@dimen/dp_5"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/dp_5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_margin="@dimen/dp_2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:text="@string/clientName"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:textColor="@color/black"
                        android:text=":"/>

                    <EditText
                        android:id="@+id/edtName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.9"
                        android:background="@android:drawable/edit_text"
                        android:inputType="textPersonName"
                        android:digits="@string/Namevalidation"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_margin="@dimen/dp_2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile"
                        android:textColor="@color/black"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:textColor="@color/black"
                        android:text=":"/>

                    <EditText
                        android:id="@+id/edtMobile"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.9"
                        android:background="@android:drawable/edit_text"
                        android:inputType="phone"
                        android:digits="@string/Mobile_no_validation"
                        android:maxLength="10"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_margin="@dimen/dp_2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:textColor="@color/black"
                        android:text=":"/>

                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.9"
                        android:background="@android:drawable/edit_text"
                        android:inputType="textEmailAddress" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_margin="@dimen/dp_2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:text="@string/location"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:textColor="@color/black"
                        android:text=":"/>

                    <TextView
                        android:id="@+id/txtLocation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.9"
                        android:background="@android:drawable/edit_text"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:drawableRight="@drawable/location"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_margin="@dimen/dp_2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:text="@string/address"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:textColor="@color/black"
                        android:text=":"/>

                    <EditText
                        android:id="@+id/edtAddress"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.9"
                        android:background="@android:drawable/edit_text"
                        android:inputType="textPostalAddress"
                        android:lines="2"
                        android:digits="@string/addressvalidation"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_margin="@dimen/dp_2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/pincode"
                        android:textColor="@color/black"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:textColor="@color/black"
                        android:text=":"/>

                    <EditText
                        android:id="@+id/edtPincode"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.9"
                        android:background="@android:drawable/edit_text"
                        android:inputType="number"
                        android:digits="@string/Mobile_no_validation"
                        android:maxLength="6"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_margin="@dimen/dp_2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:text="@string/inchargeName"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:textColor="@color/black"
                        android:text=":"/>

                    <EditText
                        android:id="@+id/edtInchargeName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.9"
                        android:background="@android:drawable/edit_text"
                        android:inputType="textPersonName"
                        android:digits="@string/Namevalidation"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_margin="@dimen/dp_2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/uploadImage"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:textColor="@color/black"
                        android:text=":"
                        android:layout_gravity="center"/>

                    <ImageView
                        android:id="@+id/btnCamera"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="0.9"
                        android:src="@drawable/ic_menu_camera"/>

                    <TextView
                        android:id="@+id/btnUpload"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center" />


                </LinearLayout>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imageNote"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:layout_margin="@dimen/dp_2"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/dp_10"
                    android:weightSum="3">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/txtNote"
                        android:textColor="@color/black"
                        android:layout_weight="0.4"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text=":"
                        android:textColor="@color/black"
                        android:layout_weight="0.1"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/clientNote"
                        android:textColor="@color/black"
                        android:layout_weight="2.5"/>
                </LinearLayout>

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:background="@drawable/button_border"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_10"/>
            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</LinearLayout>