<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/custom_border"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginRight="@dimen/dp_5"
    android:layout_marginLeft="@dimen/dp_5"
    android:orientation="vertical"
    android:padding="@dimen/dp_10">

    <TextView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_3"
        android:text="@string/old_password"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_old_password"
        android:layout_width="match_parent"
        android:hint="Enter old password*"
        android:layout_height="wrap_content"
        android:background="@android:drawable/edit_text"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789!@$_-."
        android:maxLength="12"
        android:padding="@dimen/dp_3"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_3"
android:visibility="gone"
        android:text="@string/new_password"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:hint="Enter new password*"
        android:id="@+id/edt_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789!@$_-."
        android:maxLength="12"
        android:background="@android:drawable/edit_text"
        android:padding="@dimen/dp_3"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_3"
        android:visibility="gone"
        android:text="@string/confirm_password"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:hint="Re-enter new password*"
        android:id="@+id/edt_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/edit_text"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789!@$_-."
        android:maxLength="12"
        android:padding="@dimen/dp_3"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@drawable/purple_btn_bg"
        android:hint="@string/reset_password"
        android:minEms="8"
        android:textColorHint="@android:color/white" />

</LinearLayout>