<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="@dimen/_5sdp">

    <ImageButton
        android:id="@+id/ib_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        app:srcCompat="@drawable/red_cross_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/_5sdp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_record_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/start_record"
            android:textSize="@dimen/_14sdp" />

        <ImageView
            android:id="@+id/img_record"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/ic_start_record" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_discard"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@color/highlight_color"
                android:text="@string/discard"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:background="@color/highlight_color"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>